--- a/src/style/sass/partials/_body.scss
+++ b/src/style/sass/partials/_body.scss
@@ -55,7 +55,7 @@ a {
   border: 1px solid $primary-color !important;
 }
 
-.hideButton {
+.hiddenButton {
   color: rgba(128, 128, 128, 0.374) !important;
   border: 1px solid rgba(128, 128, 128, 0.374) !important;
 }
