--- a/src/style/sass/partials/_dettagliAttivita.scss
+++ b/src/style/sass/partials/_dettagliAttivita.scss
@@ -3,3 +3,12 @@
 .img-thumbnail.active {
   border: 2px solid $primary-color;
 }
+
+.innerContainerDa {
+  background-color: rgba(255, 255, 255, 0.511);
+  border-radius: 10px;
+}
+
+.bookingSection {
+  background-color: aliceblue;
+}
