--- a/src/style/sass/partials/_dettagliAttivita.scss
+++ b/src/style/sass/partials/_dettagliAttivita.scss
@@ -12,3 +12,25 @@
 .bookingSection {
   background-color: aliceblue;
 }
+
+.detTextField {
+  background-color: rgb(255, 255, 255);
+  width: 100%;
+  border-radius: 10px !important;
+  border: solid 2px $primary-color !important;
+  padding: 0, 15px;
+  box-shadow: 0px 0px 8px #0000004b;
+  display: flex;
+}
+
+//CAROSELLO//
+
+.thumb {
+  aspect-ratio: 1/1;
+}
+
+.thumb img {
+  width: 100% !important;
+  height: 100% !important;
+
+}
